Feat: Add day 3 Update CSS Variables with JS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="card">
         <h1>Day 3</h1>
         <h2>Update CSS Variables with JS</h2>
-        <a href="day3/">Click here</a>
+        <a href="day3/css.html">Click here</a>
     </div>
 
 
